# csd-optimade

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-bake.hcl  pyproject.toml
.github/workflows/: build.yml  ci.yml
src/csd_optimade/: __init__.py  fields.py  ingest.py  mappers.py  serve.py
tests/: conftest.py  test_init.py  test_mappers.py  utils.py
