[project]
name = "csd-optimade"
readme = "README.md"
keywords = ["optimade", "ccdc", "csd", "crystals", "jsonapi", "materials"]
license = { text = "MIT" }
authors = [
    { name = "Matthew Evans (datalab industries ltd.)", email = "matthew@datalab.industries" },
]
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Database :: Front-Ends",
]
requires-python = ">= 3.11, < 3.12"
dependencies = [
    "optimade[ase] ~= 1.1",
    "optimade-maker ~= 0.3",
    "tqdm ~= 4.66",
    "csd-python-api ~= 3.2",  # requires https://pip.ccdc.cam.ac.uk registry
]

[project.scripts]
csd-ingest = "csd_optimade.ingest:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.2,<9.0",
    "pytest-cov>=4,<6",
    "mypy~=1.0",
    "pre-commit~=3.0",
    "ruff~=0.5",
]

[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.dynamic]
version = { attr = "csd_optimade.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "Q"]
ignore = ["E501", "E402"]
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []
per-file-ignores = {}
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-rs"
